[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/default.theme" type="Theme" id=1]
[ext_resource path="res://scripts/gui/gui.gd" type="Script" id=2]
[ext_resource path="res://assets/styles/stylebox_flat.stylebox" type="StyleBox" id=3]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 6.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 188.0
margin_bottom = 20.0
custom_styles/panel = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 184.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
text = "B:"

[node name="BudgetLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 16.0
text = "1000"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 60.0
margin_bottom = 16.0

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 16.0
text = "T:"

[node name="TaxesLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 16.0
text = "1000"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 124.0
margin_bottom = 16.0

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 144.0
margin_bottom = 16.0
text = "M:"

[node name="MaintenenaceLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 180.0
margin_bottom = 16.0
text = "1000"
